fix position for labels mobile and spacing on works page mobile

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -44,7 +44,7 @@
 @media screen and (max-width: 600px){
 	.home-media-label {
 		top: default;
-		position: default;
+		position: relative;
 		bottom: -20px;
 		padding-top: 275px;
 		padding-left: 0px;
