--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -14,11 +14,11 @@
 	border-top: 29px solid black;
 	margin-left: 30px;
 	padding-top: 30px;
-
+	margin-bottom: 30px;
 }
 
 .work-work-container .hero-container {
-	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 .mobile-only {
@@ -33,7 +33,7 @@
 		padding-top: 0px;
 		border-bottom: 0;
 		grid-gap: 20px;
-
+		margin-bottom: 0px;
 	}
 
 	.work-description {
